<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    >

    <RelativeLayout
        android:id="@+id/layout$_points_to_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView$_points_to_win"
            style="@style/Settings_textViews" />

        <Spinner
            android:id="@+id/spinner$_points_to_win"
            style="@style/Settings_spinners" />

    </RelativeLayout>

    <View
        style="@style/Settings_line"/>

    <RelativeLayout
        android:id="@+id/layout$_forbidden_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView$_forbidder_words"
            style="@style/Settings_textViews"/>

        <Spinner
            android:id="@+id/spinner$_forbidden_words"
            style="@style/Settings_spinners"
            />

    </RelativeLayout>

    <View
        style="@style/Settings_line"/>

    <RelativeLayout
        android:id="@+id/layout$_points_correct_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView$_points_correct_answer"
            style="@style/Settings_textViews"/>

        <Spinner
            android:id="@+id/spinner$_points_correct_answer"
            style="@style/Settings_spinners"
            />

    </RelativeLayout>

    <View
        style="@style/Settings_line"/>

    <RelativeLayout
        android:id="@+id/layout$_points_incorrect_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView$_points_incorrect_answer"
            style="@style/Settings_textViews"/>

        <Spinner
            android:id="@+id/spinner$_points_incorrect_answer"
            style="@style/Settings_spinners"
            />

    </RelativeLayout>

    <View
        style="@style/Settings_line"/>

    <RelativeLayout
        android:id="@+id/layout$_time_per_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView$_time_per_player"
            style="@style/Settings_textViews"/>

        <Spinner
            android:id="@+id/spinner$_time_per_player"
            style="@style/Settings_spinners"
            />

    </RelativeLayout>

    <View
        style="@style/Settings_line"/>

    <LinearLayout
        android:id="@+id/layout$_questions_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView$_question_level"
            style="@style/Settings_textViews"/>

        <CheckBox
            android:id="@+id/level_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/level_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/level_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/level_very_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        style="@style/Settings_line"/>

    <Button
        android:id="@+id/button_save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveChanges"
        />

    <Button
        android:id="@+id/button_back_to_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="backToDefault"
        />

</LinearLayout>